objects/TestEELObj__c.object
<CustomObject>
    <fields>
        <fullName>EEL_Field1__c</fullName>
        <label>EEL_Field1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EEM__c</fullName>
        <label>EEM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailID__c</fullName>
        <label>EmailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FEM__c</fullName>
        <label>FEM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEM__c</fullName>
        <label>PEM</label>
        <type>Email</type>
    </fields>
    <label>TestEELObj</label>
    <nameField>
        <label>TestEELObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestEELObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>